{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 226,
  "lineage": "02abd60e-dfa6-d483-4dcc-b1d7b691c288",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "internal_ip_postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.0.0.8",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-06-29T21:56:23.913-07:00",
            "description": "An internal IP address for my postgres",
            "id": "projects/synergize-tech/regions/asia-southeast2/addresses/ip-postgres",
            "name": "ip-postgres",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "synergize-tech",
            "purpose": "GCE_ENDPOINT",
            "region": "asia-southeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/synergize-tech/regions/asia-southeast2/addresses/ip-postgres",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/synergize-tech/regions/asia-southeast2/subnetworks/subnet-test"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "internal_ip_redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.0.0.9",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-06-29T21:56:23.930-07:00",
            "description": "An internal IP address for my redis",
            "id": "projects/synergize-tech/regions/asia-southeast2/addresses/ip-redis",
            "name": "ip-redis",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "synergize-tech",
            "purpose": "GCE_ENDPOINT",
            "region": "asia-southeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/synergize-tech/regions/asia-southeast2/addresses/ip-redis",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/synergize-tech/regions/asia-southeast2/subnetworks/subnet-test"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "jumphost_ip_addr",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.0.0.10",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-06-29T21:56:23.942-07:00",
            "description": "An internal IP address for my jump host",
            "id": "projects/synergize-tech/regions/asia-southeast2/addresses/ip-jumhost",
            "name": "ip-jumhost",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "synergize-tech",
            "purpose": "GCE_ENDPOINT",
            "region": "asia-southeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/synergize-tech/regions/asia-southeast2/addresses/ip-jumhost",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/synergize-tech/regions/asia-southeast2/subnetworks/subnet-test"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-06-29T21:55:59.021-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/synergize-tech/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/synergize-tech/global/networks/vpc-test",
            "priority": 1000,
            "project": "synergize-tech",
            "self_link": "https://www.googleapis.com/compute/v1/projects/synergize-tech/global/firewalls/allow-ssh",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internal_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-06-29T21:55:59.013-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/synergize-tech/global/firewalls/allow-all-internal",
            "log_config": [],
            "name": "allow-all-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/synergize-tech/global/networks/vpc-test",
            "priority": 1000,
            "project": "synergize-tech",
            "self_link": "https://www.googleapis.com/compute/v1/projects/synergize-tech/global/firewalls/allow-all-internal",
            "source_ranges": [
              "10.0.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_jumphost",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-arm64-v20230628",
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/synergize-tech/zones/asia-southeast2-a/disks/jump-host"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/synergize-tech/zones/asia-southeast2-a/instances/jump-host",
            "instance_id": "207862276923055689",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "YRVyWdOd6hw=",
            "name": "jump-host",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/synergize-tech/global/networks/vpc-test",
                "network_ip": "10.0.0.10",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/synergize-tech/regions/asia-southeast2/subnetworks/subnet-test",
                "subnetwork_project": "synergize-tech"
              }
            ],
            "project": "synergize-tech",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/synergize-tech/zones/asia-southeast2-a/instances/jump-host",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "asia-southeast2-a"
          },
          "dependencies": [
            "google_compute_address.jumphost_ip_addr",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-arm64-v20230628",
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/synergize-tech/zones/asia-southeast2-a/disks/redis"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/synergize-tech/zones/asia-southeast2-a/instances/redis",
            "instance_id": "4338304738911313483",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "YRVyWdOd6hw=",
            "name": "redis",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/synergize-tech/global/networks/vpc-test",
                "network_ip": "10.0.0.9",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/synergize-tech/regions/asia-southeast2/subnetworks/subnet-test",
                "subnetwork_project": "synergize-tech"
              }
            ],
            "project": "synergize-tech",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/synergize-tech/zones/asia-southeast2-a/instances/redis",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "asia-southeast2-a"
          },
          "dependencies": [
            "google_compute_address.internal_ip_redis",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "wm_postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-arm64-v20230628",
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/synergize-tech/zones/asia-southeast2-a/disks/postgres"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/synergize-tech/zones/asia-southeast2-a/instances/postgres",
            "instance_id": "6674687336421514826",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "YRVyWdOd6hw=",
            "name": "postgres",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/synergize-tech/global/networks/vpc-test",
                "network_ip": "10.0.0.8",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/synergize-tech/regions/asia-southeast2/subnetworks/subnet-test",
                "subnetwork_project": "synergize-tech"
              }
            ],
            "project": "synergize-tech",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/synergize-tech/zones/asia-southeast2-a/instances/postgres",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "asia-southeast2-a"
          },
          "dependencies": [
            "google_compute_address.internal_ip_postgres",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/synergize-tech/global/networks/vpc-test",
            "mtu": 0,
            "name": "vpc-test",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "synergize-tech",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/synergize-tech/global/networks/vpc-test"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-06-29T21:55:59.913-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/synergize-tech/regions/asia-southeast2/routers/nat-router",
            "name": "nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/synergize-tech/global/networks/vpc-test",
            "project": "synergize-tech",
            "region": "asia-southeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/synergize-tech/regions/asia-southeast2/routers/nat-router"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-06-29T21:56:02.111-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/synergize-tech/regions/asia-southeast2/subnetworks/subnet-test",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "subnet-test",
            "network": "https://www.googleapis.com/compute/v1/projects/synergize-tech/global/networks/vpc-test",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "synergize-tech",
            "purpose": "PRIVATE",
            "region": "asia-southeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/synergize-tech/regions/asia-southeast2/subnetworks/subnet-test",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.cloud-nat",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "synergize-tech/asia-southeast2/nat-router/nat-config",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 64,
            "name": "nat-config",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "synergize-tech",
            "region": "asia-southeast2",
            "router": "nat-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_router.router",
            "module.cloud-nat.google_compute_router.router",
            "module.cloud-nat.random_string.name_suffix"
          ]
        }
      ]
    }
  ]
}